<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="1"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textViewTitleLable"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/textViewTitleLable"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextEditTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
<!--        <TextView-->
<!--            android:id="@+id/textViewTitle"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/textViewTitle"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="@color/black"-->
<!--            />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textViewCityLable"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/textViewCityLable"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            />
<!--        <TextView-->
<!--            android:id="@+id/textViewCity"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/textViewCity"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="@color/black"-->
<!--            />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextEditCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:contentDescription="@string/tarneit_shopping_centre"
        app:srcCompat="@drawable/tarneit_shoppingcenter"
        android:scaleType="fitXY"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/textViewDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewDateLabel"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TextEditDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/DatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:layout_marginStart="10dp"
            >

        </Button>
<!--        <TextView-->
<!--            android:id="@+id/textViewDate"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/textViewDate"-->
<!--            android:textSize="16sp"-->
<!--            android:textColor="@color/black"-->
<!--            />-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:text="@string/textViewRating"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:textSize="18sp" />
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="0.5"
            android:layout_weight="1"
            />
    </LinearLayout>



</GridLayout>